5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1793_1621.log
== TEST (2019-05-30 18:56:53) 
-- CODE:
x=25.4/4
print(x)
-- OUTPUT:
6.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:00) 
-- CODE:
x=(6.6+5.5+4.4+9.0)/4
print(x)
-- OUTPUT:
6.375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:12:39) 
-- CODE:
from numpy import *
ARROZ=1.25
FEIJAO=2.60
BIS=1.80
MIOJO=0.85
FANTA=3.20
comprando=input("produtos:" )
quantidade=input("qtd: ")
total=comprando*quantidade
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:13:42) 
-- CODE:
from numpy import *
ARROZ=1.25
FEIJAO=2.60
BIS=1.80
MIOJO=0.85
FANTA=3.20
comprando=input("produtos:" )
quantidade=input("qtd: ")
total=comprando*quantidade
print(round(total,2)
-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:13:50) 
-- CODE:
from numpy import *
ARROZ=1.25
FEIJAO=2.60
BIS=1.80
MIOJO=0.85
FANTA=3.20
comprando=input("produtos:" )
quantidade=input("qtd: ")
total=comprando*quantidade
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:15:47) 
-- CODE:
from numpy import *
ARROZ=1.25
FEIJAO=2.60
BIS=1.80
MIOJO=0.85
FANTA=3.20
comprando=array(input("produtos:" ))
quantidade=array(input("qtd: "))
total=comprando*quantidade
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:18:37) 
-- CODE:
from numpy import *
P=array(eval("produtos:" ))
v=array(eval("valor: "))
c=array(input("produtos:" ))
q=array(input("qtd: "))
total=comprando*quantidade
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:19:00) 
-- CODE:
from numpy import *
P=array(eval("produtos:" ))
v=array(eval("valor: " ))
c=array(input("produtos:" ))
q=array(input("qtd: "))
total=c*q
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:19:43) 
-- CODE:
from numpy import *
P=array(eval(input("produtos:" )))
v=array(eval(input("valor: " )))
c=array(input("produtos:" ))
q=array(input("qtd: "))
total=c*q
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:34:06) 
-- CODE:
from numpy import *
P=array(eval(input("produtos: ")))
q=array(eval(input("quantidade: ")))
c=array(eval(input("comprado: ")))	
if(c[1]=="ARROZ"):
	a=c[1]*q[1]
elif(c[2]=="FANTA"):
	b=c[2]*q[3]
elif(c[3]=="BIS"):
	d=c[3]*q[3]
h=a+b+d
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:35:01) 
-- CODE:
from numpy import *
P=array(eval(input("produtos: ")))
q=array(eval(input("quantidade: ")))
c=array(eval(input("comprado: ")))	
if(c[1]=="ARROZ"):
	a=1.25*q[1]
elif(c[2]=="FANTA"):
	b=3.20*q[3]
elif(c[3]=="BIS"):
	d=1.80*q[3]
h=a+b+d
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:41:38) 
-- CODE:
from numpy import *
P=array(eval(input("produtos: ")))
q=array(eval(input("quantidade: ")))
c=array(eval(input("comprado: ")))	
if(c[1]==ARROZ):
	a=1.25*q[1]
elif(c[2]==FANTA):
	b=3.20*q[3]
elif(c[3]==BIS):
	d=1.80*q[3]
h=a+b+d
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:44:10) 
-- CODE:
from numpy import *
P=array(eval(input("produtos: ")))
q=array(eval(input("quantidade: ")))
c=array(eval(input("comprado: ")))	
if(c[1]=ARROZ):
	a=1.25*q[1]
elif(c[2]=FANTA):
	b=3.20*q[3]
elif(c[3]=BIS):
	d=1.80*q[3]
h=a+b+d
print(h)
-- ERROR:
File "XXXX", line 5
    if(c[1]=ARROZ):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:44:34) 
-- CODE:
from numpy import *
P=array(eval(input("produtos: ")))
q=array(eval(input("quantidade: ")))
c=array(eval(input("comprado: ")))	
if(c[1]=="ARROZ"):
	a=1.25*q[1]
elif(c[2]=="FANTA"):
	b=3.20*q[3]
elif(c[3]=="BIS"):
	d=1.80*q[3]
h=a+b+d
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:47:03) 
-- CODE:
from numpy import *
P=array(eval(input("produtos: ")))
q=array(eval(input("quantidade: ")))
c=array(eval(input("comprado: ")))	
if(c[1]=="ARROZ"):
	a=1.25*q[1]
elif(c[2]=="FANTA"):
	b=3.20*q[3]
elif(c[3]=="BIS"):
	d=1.80*q[3]
h=a+b+d
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
